--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
+    "redux": "^4.0.0",
     "tachyons": "^4.9.1"
   },
   "scripts": {
